Update NameLayer tab completions